FIx flicker

--- a/app/src/containers/Popup/PopupWidget/PopupWidget.scss
+++ b/app/src/containers/Popup/PopupWidget/PopupWidget.scss
@@ -1,9 +1,6 @@
 .torus-widget {
   position: absolute;
-  --positionWidth: 0px;
-  &.login-dialog {
-    --positionWidth: 34px;
-  }
+  --positionWidth: 14px;
   &.top-left {
     top: var(--positionWidth);
     left: var(--positionWidth);
